--- a/style.css
+++ b/style.css
@@ -22,8 +22,16 @@ body {
 .combat {
     display: flex;
     justify-content: center;
-    gap: 80px;
+    align-items: center;
+    gap: 32px;
     height: 200px;
+}
+
+#versus-img {
+    border-style: solid;
+    border-radius: 50%;
+    border-color: red;
+    border-width: 1.5px;
 }
 
 .button-container {
